# switchboard

./: .gitignore  ARCHITECTURE.md  CORE_RUNTIME.md  DECISIONS.md  NOTES.md  PLAN.md  README.md  ROADMAP.md  pyproject.toml
.switchboard/: memory.json
switchboard/: __init__.py
switchboard/cli/: README.md  __init__.py  app.py
switchboard/compute/: README.md  __init__.py  manager.py  session.py
switchboard/config/: README.md  __init__.py  loader.py  settings.py
switchboard/context/: __init__.py  builders.py  graph.py  manager.py  models.py  parser.py  scanner.py
switchboard/evaluation/: __init__.py  evaluators.py  manager.py  report.py  scoring.py
switchboard/exceptions/: README.md  __init__.py  base.py
switchboard/execution/: __init__.py  allocator.py  executor.py  manager.py  monitor.py  queues.py  retry.py  scheduler.py
switchboard/interfaces/: README.md  __init__.py  compute.py  context.py  evaluation.py  event_bus.py  execution.py  memory.py  provider.py  registry.py  service.py  task.py
switchboard/kernel/: README.md  __init__.py  bootstrap.py  event_bus.py  kernel.py  lifecycle.py  resource_manager.py  state.py
switchboard/logging/: README.md  __init__.py  config.py
switchboard/memory/: __init__.py  manager.py  reflection.py  retrieval.py  store.py
switchboard/plugins/: README.md  __init__.py  manager.py
tests/: conftest.py  test_compute.py  test_config.py  test_context.py  test_evaluation.py  test_event_bus.py  test_execution.py  test_kernel.py  test_memory.py  test_ollama.py  test_plugins.py  test_registry.py  test_task.py
(+32 files in other folders)
